--- a/src/main/resources/templates/media_detail.html
+++ b/src/main/resources/templates/media_detail.html
@@ -2,7 +2,9 @@
 #@mainLayout()
 Medias
 
-<h1>Media Detail</h1>
-<div>$media.getTitle()</div>
+<h1>$media.getTitle()</h1>
+<p>$media.getReleaseDate()</p>
+<div>$media.getGenreName()</div>
+<p>$media.getSummary()</p>
 
 #end
